Binary Tree Code Added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(linked_list_practice)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(linked_list_practice Linked_list/circular_linked_list.cpp )
+add_executable(linked_list_practice "Binary Tree/binary_tree.cpp")
